[package]
name = "floor_fifty_v0-9"
version = "0.8.0"
edition = "2021"

[dependencies]
bevy = {version = "0.9.0", features = ["dynamic"]}
bevy-inspector-egui = "0.14.0"
bevy_rapier2d = {version = "0.19.0", features = ["simd-stable", "debug-render", "parallel"]}
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3
[profile.dev]
opt-level = 1

[workspace]
resolver = "2"
