[package]
name = "floor_fifty_v0-9"
version = "0.8.0"
edition = "2021"

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = {version = "0.9.0", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"]}
bevy-inspector-egui = "0.14.0"
bevy_rapier2d = {version = "0.19.0", features = ["simd-stable", "debug-render", "parallel"]}
bevy_kira_audio = {version="0.13.0", features = ["wav"]}
rand = "0.8.5"
lerp = "0.4.0"

[profile.dev.package."*"]
opt-level = 3
[profile.dev]
opt-level = 1

[workspace]
resolver = "2"
